add custom domain name

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
 </head>
 <body>
-  <script src="https://YourSiteDomain/lightning/lightning.out.js"></script>
+  <script src="https://woodstoxx--test.sandbox.lightning.force.com/lightning/lightning.out.js"></script>
 
   <script>
     $Lightning.use("runtime_appointmentbooking:lightningOutGuest",
@@ -14,7 +14,7 @@
                     component.startFlow("Salesforce_Scheduler_Unauthenticated");
                 }
             );
-        },    'https://YourSiteDomain/SiteURL/'  // Site endpoint
+        }, 'https://woodstoxx--test.sandbox.lightning.force.com/'  // Site endpoint
     );
 </script>
 
