--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     );
 </script>
 
-  <div id="lightningConainer">
+  <div id="lightningContainer">
     <p>Invoke the Lightning Component specified in the Script.</p>
   </div>
   
