--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
                 { },    // attributes to set on the component when created
                 "lightningContainer",    // the DOM location to insert the component
                 function(component) {            // API name of the Flow
-                    component.startFlow("Salesforce_Scheduler_Unauthenticated");
+                  console.log('Hi from callback!');
+                    component.startFlow("Woodstoxx_Inbound_New_Guest_Appointment");
                 }
             );
         }, 'https://woodstoxx--test.sandbox.lightning.force.com/'  // Site endpoint
