--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     component.startFlow("Woodstoxx_Inbound_New_Guest_Appointment");
                 }
             );
-        }, 'https://woodstoxx--test.sandbox.lightning.force.com/'  // Site endpoint
+        }, 'https://woodstoxx--test.sandbox.lightning.force.com'  // Site endpoint
     );
 </script>
 
