Update flow name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 "lightningContainer",    // the DOM location to insert the component
                 function(component) {            // API name of the Flow
                   console.log('Hi from callback!');
-                    component.startFlow("test_flow_thomas");
+                    component.startFlow("Woodstoxx_Inbound_New_Guest_Appointment");
                 }
             );
         }, 'https://woodstoxx--test.sandbox.my.site.com/TheHub'  // Site endpoint
