--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </style>
 </head>
 <body>
-  <script src="https://woodstoxx--test.sandbox.my.site.com/TheHub/lightning/lightning.out.js"></script>
+  <script src="https://woodstoxx--test.sandbox.lightning.force.com/lightning/lightning.out.js"></script>
 
   <script>
     $Lightning.use("runtime_appointmentbooking:lightningOutGuest",
