--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </style>
 </head>
 <body>
-  <script src="https://woodstoxx--test.sandbox.lightning.force.com/lightning/lightning.out.js"></script>
+  <script src="https://woodstoxx--test.sandbox.my.site.com/TheHub/lightning/lightning.out.js"></script>
 
   <script>
     $Lightning.use("runtime_appointmentbooking:lightningOutGuest",
@@ -24,7 +24,7 @@
                     component.startFlow("Woodstoxx_Inbound_New_Guest_Appointment");
                 }
             );
-        }, 'https://woodstoxx--test.sandbox.my.site.com/test'  // Site endpoint
+        }, 'https://woodstoxx--test.sandbox.my.site.com/TheHub'  // Site endpoint
     );
 </script>
 
