--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             display: inline-flex !important;
         }
 </style>
+  <link rel="stylesheet" href="salesforce-lightning-design-system.min.css">
 </head>
 <body>
   <script src="https://woodstoxx--test.sandbox.my.site.com/TheHub/lightning/lightning.out.js"></script>
